code management and layout issue solving

--- a/CSS/Services.css
+++ b/CSS/Services.css
@@ -12,42 +12,6 @@ body {
 }
 
 
-/* HEADER + NAV */
-header {
-  background: #004aad;
-  color: white;
-  height: 3.72rem;
-  padding: 1rem 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: sticky; 
-  top: 0;
-  z-index: 10;
-}
-header a {
-  color: #fff;
-  text-decoration: none;
-}
-.logo {
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-decoration: none;
-  color: white;
-   
-}
-
-nav ul {
-  display: flex;
-  gap: 1rem;
-  list-style: none;
-}
-
-nav a {
-  color: white;
-  text-decoration: none;
-  font-weight: 500;
-}
 
 .service {
       padding: 2rem;
@@ -105,119 +69,3 @@ nav a {
   display: none;
 }
 
-footer {
-  background-color: #002b5c;
-  color: #fff;
-  text-align: center;
-  padding: 20px 10px;
-}
-
-.footer-container h2 {
-  font-size: 18px;
-  margin-bottom: 8px;
-}
-
-.footer-social {
-  margin: 10px 0;
-}
-
-.footer-social a {
-  display: inline-block;
-  width: 35px;
-  height: 35px;
-  line-height: 35px;
-  margin: 0 5px;
-  border-radius: 50%;
-  background-color: #014078;
-  color: #fff;
-  text-decoration: none;
-  font-size: 16px;
-  transition: background 0.3s;
-}
-
-.footer-social a:hover {
-  background-color: #1da1f2;
-}
-
-.footer-info {
-  font-size: 12px;
-  margin: 5px 0;
-  color: #ccc;
-}
-
-.footer-bottom {
-  font-size: 11px;
-  margin-top: 5px;
-  color: #aaa;
-}
-
-/* Mobile adjustments */
-@media (max-width: 360px) {
-  .footer-container h2 {
-    font-size: 16px;
-  }
-
-  .footer-social a {
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    font-size: 14px;
-  }
-
-  .footer-info {
-    font-size: 11px;
-  }
-
-  .footer-bottom {
-    font-size: 10px;
-  }
-}
-@media (max-width: 768px) {
-  nav ul {
-    flex-direction: column;
-    background: #004aad;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    right: 0;
-    display: none;
-    text-align: center;
-  }
-
- #menu-toggle:checked + .menu-icon + nav ul {
-  display: flex;
-  animation: slideDown 0.3s ease-in-out;
-}
-  .menu-icon {
-    display: block;
-    position: absolute;
-    right: 1.5rem;
-  }
-
-  nav ul li {
-    padding: 1rem 0;
-  }
-}
- /* Active nav link */
-nav a.active {
-  border-bottom: 2px solid #090236;
-}
-
-/* Shrinking header on scroll */
-header.shrink {
-  padding: 0.5rem 2rem;
-  background: #003080;
-  transition: 0.3s;
-}
-
-.toform{
-  text-decoration: none;
-  color: black;
-}
-
-#wlcm{
-  font-size: 2rem;
-}
-
-
-  </style>
